# nsp2

./: .cvsignore  .gitignore  COPYING  ChangeLog  Makefile  Makefile.OBJ.in  Makefile.in  Makefile.incl  Makefile.incl.in  Makefile.mak  Makesubdirs.bat  Myconfigure  Path.incl  README.md  Version.incl  aclocal.m4  autogen.sh  clean.sh  configure  configure.ac  configure.in  libtool  nsp.iss  nsp.iss.in
config/: .cvsignore  .gitignore  Make.ocaml.in  Makedll.incl  Makefile  Makefile.aix  Makefile.alpha  Makefile.cygwin  Makefile.darwin  Makefile.gcwin32  Makefile.hpux  Makefile.hpux9  Makefile.incl.mak  Makefile.incl.mak.in  Makefile.linux  Makefile.linux.in  Makefile.mak  Makefile.mingw32  Makefile.mingw32.in  Makefile.netbsd  Makefile.sgi  Makefile.solaris  Makefile.sunos  Makefile.ultrix  Makelib  Makemex  Makemex.in  Makeso.incl  Makeso.incl.in  Makeso.mingw  Version.incl.in  ac_check_cholmod.m4  ac_check_pointer.m4  ac_check_suitesparse.m4  ac_check_tcltk.m4  ac_check_umfpack.m4  ac_find_file.m4  ac_tcl.m4  acx_blas.m4  acx_lapack.m4  (+18 more)
config/language-specs/: nsp.lang
demos/: Makefile  alldems.dem
demos/graphics/: 3dshading.sci  Makefile  NouvArbreQ.sci  anim.sce  colormap.sci  contourf.dem  cube.sce  dessin-1.dem  dessin.dem  exported.sce  fac3d1.sce  graphic_list.sce  graphic_list_ogl.sce  graphic_list_peugeot.sce  graphic_list_unfinished.sce  graphic_pos.sce  main_graphic.sci  multi.sci  peaks.sci  shell.sce  string-rotated.sce  tube.sce  xdemo-1.dem
demos/grmenu/: Makefile  Names  TEST.sci  Untitled-1  gr_menu.sci  gr_menu1.sci  gr_menu2.sci  test.sci
demos/gtk2/: Makefile  mainplus.sci
demos3/: Makefile  alldems.dem
demos3/graphics/: .cvsignore  graphic_list.sce  graphic_pos.sce  main_graphic.sci
demos3/grmenu/: 00README  Makefile  gr_menu1.sci  gr_menu2.sci
demos3/gtk3/: COPYING  Makefile  main.sci  mainplus.sci
libs/: AAbase.def  Makefile.mak  NperiPos.ps  System.def  System1.def  func.def  libf2c.def  mexlib.def  nsp.def  parse.def  xdr.def  zblas.def  zcalelm.def
macros/: .gitignore  Makefile  Makefile.lib  scicos.tst
macros/ast/: ast_bvar.sci  ast_check_callfun.sci  ast_closure.sci  ast_collect_funcall.sci  ast_collect_mlhs_names.sci  ast_collect_vars.sci  ast_encours.sci  ast_eval.sci  ast_expand.sci  ast_expand_expr.sci  ast_expr.sci  ast_funcall_inline.sci  ast_function_rename_vars.sci  ast_function_vars.sci  ast_insert.sci  ast_mlhs_names.sci  ast_model.sci  ast_new_var.sci  ast_pprint.sci  ast_rename_vars.sci  ast_replace_funcall.sci  ast_visit.sci  pretty_printer.sci
macros/calpol/: cmndred.sci  coeff.sci  cofactors.sci  coffg.sci  colcompr.sci  compose_p.sci  denom.sci  denom_r.sci  derivat.sci  derivat_r.sci  det_p.sci  determ.sci  detr.sci  diophant.sci  displacement.sce  div_p_p.sci  epdiv_fft.sci  euclide_p_p.sci  factors.sci  factors_p.sci  fast_gcd_wls.sce  gcd.sci  gcd_p_p.sci  hermit.sci  horner_p_p.sci  horner_r.sci  hrmt.sci  htrianr.sci  inv_coeff.sci  invr.sci  lcm.sci  lcm_i.sci  lcm_m.sci  lcm_p.sci  lcmdiag.sci  lu_sylvester.sci  numer.sci  numer_r.sci  pfactors.sci  phasemag.sci  (+14 more)
macros/control/: abcd_r.sci  abinv.sci  arhnk.sci  balreal.sci  bilin.sci  cainv.sci  calfrq_p.sci  canon.sci  cls2dls.sci  colregul.sci  cont_frm.sci  cont_mat.sci  contrss.sci  csim.sci  ctr_gram.sci  dbphi.sci  ddp.sci  des2tf.sci  dscr.sci  dsimul.sci  dt_ility.sci  equil.sci  equil1.sci  findABCD.sci  findAC.sci  findBDK.sci  findR.sci  findx0BD.sci  flts.sci  frep2tf.sci  freson.sci  g_margin.sci  gfrancis.sci  imrep2ss.sci  inistate.sci  invrs.sci  invsyslin.sci  kpure.sci  krac2.sci  lincos.sci  (+41 more)
macros/egraphics/: Mpolarplot.sci  champ3.sci  cplot.sci  cpoints.sci  es_demos.sci  grid2Ddata.sci  histogram.sci  histogram2.sci  interp2.sci  interp3.sci  interp3v.sci  isosurf3d.sci  polarmap.sci  rebin.sci  ribbon.sci  setcmap.sci  shadecomp.sci  shadesurf.sci  shadesurf2.sci  shift.sci  shrinkfaces.sci  slice3d.sci  spaghetti.sci  sphere.sci  spherecast.sci  trisplit.sci  tubelet.sci  xprofile.sci
macros/graphics/: Makefile  Sfgrayplot.sci  Sgrayplot.sci  TEST.sci  addcolor.sci  black.sci  bode.sci  chart.sci  colorbar.sci  contourf.sci  errbar.sci  eval3d.sci  eval3dp.sci  evans.sci  fac3d.sci  fac3d1.sci  fchamp.sci  fplot2d.sci  fplot3d.sci  fplot3d1.sci  gainplot.sci  genfac3d.sci  getclick.sci  getcolor.sci  getsymbol.sci  gr_menu.sci  graduate.sci  graycolormap.sci  graypolarplot.sci  greencolormap.sci  hist3d.sci  histplot.sci  hotcolormap.sci  interpolate.sci  isoview.sci  jetcolormap.sci  locate.sci  m_circle.sci  menubar.sci  milk_drop.sci  (+22 more)
macros/linalg/: aff2ab.sci  classmarkov.sci  coff.sci  colcomp.sci  cond.sci  eigenmarkov.sci  lsmr.sci  (+39 more)
man/: Makefile  scicoslab.4dx
pvm3/: .cvsignore  .gitignore  Makefile  Makefile.aimk  Makefile.aimk.in  Makefile.in  make.bat
scripts/: .cvsignore  BEpsf.g  Blatdoc.g  Blatdocs.g  Blatexpr.g  Blatexpr2.g  Blatexprs.g  Blpr.g  Mak2ABSMak  Mak2VCMak  Makefile  Makefile.in  nsp-gcwin32.g  nsp-gtk.g.in  nsp-gtk2.g.in  nsp-gtk3.g.in  nsp.g.in  nsp.pc  nsp.pc.g  nsplibtool  nsplibtool-inst  scilab-gtk.g  scilab-gtk.g.in  scilab.g
src/: Make.lib  Make.lib.mak  Makefile  Makefile.in  Makefile.mak  Makesubdirs.bat  gtk-doc.el
src/system/tcl/unix/: .cvsignore  Makefile  Makefile.in  Makefile.kp  config.cache  config.h.in  config.status  configure  configure.in  file.c  tclConfig.sh  tclUnixFCmd.c  tclUnixFile.c  tclUnixInit.c  tclUnixPort.h
tests/: .cvsignore  .gitignore  Hash.tst  Makefile  acquire.tst  addinter.c  addinter.tst  afaire  agraph.tst  algebra-balanc.tst  algebra-bdiag.tst  algebra-bslash.tst  algebra-chol.tst  algebra-det.tst  algebra-funs.sce  algebra-gschur.tst  algebra-gspec.tst  algebra-hess.tst  algebra-inv.tst  algebra-lsq.tst  algebra-lu.tst  algebra-qr.tst  algebra-qz.dia  algebra-qz.tst  algebra-rcond.tst  algebra-schur.tst  algebra-slash.tst  algebra-spec.tst  algebra-svd.tst  algebra.tst  amell.tst  ast.tst  bool.tst  bsearch.tst  cdfxxx-msg.tst  cdfxxx.tst  cells.tst  cholmod.tst  class.tst  classref.tst  (+130 more)
toolboxes/: .cvsignore  .gitignore  Makefile  Makefile.in
(+4153 files in other folders)
